# django-warrant2

./: pyproject.toml  requirements.txt  setup.py
django_warrant/: backend.py  tests.py  urls.py  utils.py
django_warrant/views/: subscriptions.py
